--- a/src/app/appservices/appservices.component.html
+++ b/src/app/appservices/appservices.component.html
@@ -1,8 +1,8 @@
 <div id="top" class="m-2" style="font-family: poppins;">
     <div class="row" style="margin: 0;padding:0">
         <div class="col m-5 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-            <h4>
-                IDENTIFICATION OF SLUMS</h4>
+            <h4><b>
+                IDENTIFICATION OF SLUMS</b></h4>
 
             <p>
                 Slums are identified using geographic information system (GIS) which is a conceptualized framework that
@@ -15,7 +15,7 @@
         </div>
         <div class="col m-5 shadow " style="background-color: whiteSmoke;padding: 2rem;">
 
-            <h4>AREA ANALYSIS</h4>
+            <h4><b>AREA ANALYSIS</b></h4>
 
             <p>
                 Area analysis is an amalgamation of a list containing geographical features of a particular area, soil
@@ -30,9 +30,9 @@
 
     </div>
     <div style="margin-left: 3rem;">
-        <h4>
+        <h4><b>
             CATEGORIZED MAPS
-        </h4>
+        </b></h4>
         <p>
             Categorized maps are the domain where the slums can be identified based on Population density or Area
             Occupied
@@ -43,8 +43,8 @@
     </div>
     <div style="margin: 0;padding:0">
         <div class="col m-5 mb-4 mt-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
-            <h4>
-                Population density-based map</h4>
+            <h4><b>
+                Population density-based map</b></h4>
 
             <p>
                 POPULATION DENSITY MAPS are typically derived from census data and aggregated into arbitrary areal units
@@ -73,7 +73,7 @@
         </div>
         <div class="col m-5 mt-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
 
-            <h4> Area Categorization</h4>
+            <h4><b> Area Categorization</b></h4>
 
             <p>
                 Both antiquated and new slums will be categorized and listed based on the area they are occupying.
@@ -90,18 +90,18 @@
 
     <div class="m-5">
 
-        <h4>
+        <h4><b>
             SAMPLE 2D AND 3D DIAGRAMS:
-        </h4>
+        </b></h4>
 
         <p class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
             2D and 3D designs are provided here in this section based on the Terrion, soil type and no of residents
             which or
             preferably economic and also which can be maintained at low cost with maximum safety.
         </p><br />
-        <h4>
+        <h4><b>
             EMPLOYMENT OPPORTUNITIES
-        </h4>
+        </b></h4>
         <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
             <h5>
                 Work with us
@@ -126,9 +126,9 @@
                 which the job seekers can avail the position or role by submitting the necessary requirements.
             </p>
         </span><br /><br />
-        <h4>
+        <h4><b>
             DONATIONS:
-        </h4>
+        </b></h4>
 
         <span class="card border-0 shadow " style="background-color: whiteSmoke;padding: 2rem;">
             <ul>
