--- a/src/app/adminfolder/adminfeedback/adminfeedback.component.html
+++ b/src/app/adminfolder/adminfeedback/adminfeedback.component.html
@@ -3,7 +3,7 @@
         <div class="col-2 shadow card m-5 mb-0  border-0" style="background-color: whiteSmoke;padding: 1rem; "
             *ngFor="let c of data">
             <h5>{{c.fullname | uppercase}}</h5>
-            <div style="">
+            <div >
                 <i class='bx bx-envelope bx-tada'></i>&nbsp;{{c.email}}
             </div><br>
             <strong>Suggestion</strong>
