--- a/src/app/adminfolder/admindonations/admindonations.component.html
+++ b/src/app/adminfolder/admindonations/admindonations.component.html
@@ -1,6 +1,6 @@
-<div style="display: flex;justify-content:center;max-height: 100vh;font-size: 0.9rem;">
-    <div *ngIf="data else feedbacks" class="row m-5 mt-0" st>
-        <div class="col-2 shadow card m-5 mb-0  border-0" style="background-color: whiteSmoke;padding: 1rem; "
+<div style="display: flex;justify-content:center;max-height: auto;font-size: 0.9rem;">
+    <div *ngIf="data else feedbacks" class="row m-2 mt-0 ml-0" st>
+        <div class="col-3 shadow card m-5 mb-0  border-0" style="background-color: whiteSmoke;padding: 1rem; "
             *ngFor="let c of data">
             <!-- {{c | json}
             fullname: { type: "string", required: "true" },
