--- a/src/app/adminfolder/adminfeedback/adminfeedback.component.html
+++ b/src/app/adminfolder/adminfeedback/adminfeedback.component.html
@@ -1,5 +1,5 @@
-<div style="display: flex;justify-content:center;max-height: 100vh;font-size: 0.9rem;">
-    <div *ngIf="data else feedbacks" class="row m-5 mt-0" st>
+<div style="display: flex;justify-content:center;max-height: auto;font-size: 0.9rem;">
+    <div *ngIf="data&&data.length!=0 else feedbacks" class="row m-5 mt-0" st>
         <div class="col-2 shadow card m-5 mb-0  border-0" style="background-color: whiteSmoke;padding: 1rem; "
             *ngFor="let c of data">
             <h5>{{c.fullname | uppercase}}</h5>
