--- a/src/app/infrastructuremodels/infrastructuremodels.component.html
+++ b/src/app/infrastructuremodels/infrastructuremodels.component.html
@@ -1,6 +1,14 @@
 <!-- <iframe src="../assests/trails.html"  width="1600" height="460" style="border:0;">
 </iframe> -->
-<iframe src="https://kovikarthik.github.io/sayduckaz21/"  width="1600" height="460" style="border:0;">
-</iframe>
+<div style="margin: 2rem;">
+    <h3>Home-1</h3><br>
+    <iframe src="https://kovikarthik.github.io/sayduckaz21/" style="border:0;height:90vh;width: 100%;">
+    </iframe>
+</div>
+<div style="margin: 2rem;">
+    <h3>Home-2</h3><br>
+    <iframe src="https://kovikarthik.github.io/sihhome2/" style="border:0;height:90vh;width: 100%;">
+    </iframe>
+</div>
 
 <!-- <iframe width="100%" height="100%" frameBorder="0" [src]="sayduck"></iframe> -->
