--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -3,8 +3,7 @@
 <div>
     <div class="row" style="background-color: #060B4B;margin: 0;padding: 3rem;color: white;">
         <div class="col"><br />
-            <p style="line-height: 35px;"><strong style="font-size:1.7rem;color: white;font-family: 'Poppins';">HAPPY
-                    RESIDENCE 4 U
+            <p style="line-height: 35px;"><strong style="font-size:1.7rem;color: white;font-family: 'Poppins';">HAPPYRESIDENCE4U
                 </strong> is web app where you can access all type of info about the slum or an particular area in
                 detail.
                 In
