--- a/src/app/infrastructuremodels/infrastructuremodels.component.html
+++ b/src/app/infrastructuremodels/infrastructuremodels.component.html
@@ -1,5 +1,15 @@
 <!-- <iframe src="../assests/trails.html"  width="1600" height="460" style="border:0;">
 </iframe> -->
+<div class="row" style="margin: 2rem;">
+    <div class="col" style="text-align: center;">
+        <h4><b>House Blue-Print</b></h4>
+        <img src="../../assets/houseblueprint.png">
+    </div>
+    <div class="col" style="text-align: center;">
+        <h4><b>Project Plan</b></h4>
+        <img src="../../assets/projectplan.png">
+    </div>
+</div>
 <div style="margin: 2rem;">
     <h3>Home-1</h3><br>
     <iframe src="https://kovikarthik.github.io/sayduckaz21/" style="border:0;height:90vh;width: 100%;">
@@ -8,6 +18,26 @@
 <div style="margin: 2rem;">
     <h3>Home-2</h3><br>
     <iframe src="https://kovikarthik.github.io/sihhome2/" style="border:0;height:90vh;width: 100%;">
+    </iframe>
+</div>
+<div style="margin: 2rem;">
+    <h3>Home-3</h3><br>
+    <iframe src="https://kovikarthik.github.io/sihhome3/" style="border:0;height:90vh;width: 100%;">
+    </iframe>
+</div>
+<div style="margin: 2rem;">
+    <h3>Home-4</h3><br>
+    <iframe src="https://kovikarthik.github.io/sihhome4/" style="border:0;height:90vh;width: 100%;">
+    </iframe>
+</div>
+<div style="margin: 2rem;">
+    <h3>Home-5</h3><br>
+    <iframe src="https://kovikarthik.github.io/sihhome5/" style="border:0;height:90vh;width: 100%;">
+    </iframe>
+</div>
+<div style="margin: 2rem;">
+    <h3>Home-6</h3><br>
+    <iframe src="https://kovikarthik.github.io/sihhome6/" style="border:0;height:90vh;width: 100%;">
     </iframe>
 </div>
 
