--- a/src/app/infrastructuremodels/infrastructuremodels.component.html
+++ b/src/app/infrastructuremodels/infrastructuremodels.component.html
@@ -12,33 +12,52 @@
 </div>
 <div style="margin: 2rem;">
     <h3>Home-1</h3><br>
-    <iframe src="https://kovikarthik.github.io/sayduckaz21/" style="border:0;height:90vh;width: 100%;">
-    </iframe>
+    <div style="overflow: hidden;width: 95vw;height: 90vh;">
+        <iframe src="https://kovikarthik.github.io/sayduckaz21/" style="border:0;height:90vh;width: 100vw;left: 10%;">
+        </iframe>
+    </div>
 </div>
 <div style="margin: 2rem;">
-    <h3>Home-2</h3><br>
-    <iframe src="https://kovikarthik.github.io/sihhome2/" style="border:0;height:90vh;width: 100%;">
-    </iframe>
+    <h3>Home-1</h3><br>
+    <div style="overflow: hidden;width: 95vw;height: 90vh;">
+        <iframe src="https://kovikarthik.github.io/sihhome2/" style="border:0;height:90vh;width: 100vw;left: 10%;">
+        </iframe>
+    </div>
 </div>
 <div style="margin: 2rem;">
-    <h3>Home-3</h3><br>
-    <iframe src="https://kovikarthik.github.io/sihhome3/" style="border:0;height:90vh;width: 100%;">
-    </iframe>
+    <h3>Home-1</h3><br>
+    <div style="overflow: hidden;width: 95vw;height: 90vh;">
+        <iframe src="https://kovikarthik.github.io/sihhome3/" style="border:0;height:90vh;width: 100vw;left: 10%;">
+        </iframe>
+    </div>
 </div>
 <div style="margin: 2rem;">
-    <h3>Home-4</h3><br>
-    <iframe src="https://kovikarthik.github.io/sihhome4/" style="border:0;height:90vh;width: 100%;">
-    </iframe>
+    <h3>Home-1</h3><br>
+    <div style="overflow: hidden;width: 95vw;height: 90vh;">
+        <iframe src="https://kovikarthik.github.io/sihhome4/" style="border:0;height:90vh;width: 100vw;left: 10%;">
+        </iframe>
+    </div>
 </div>
 <div style="margin: 2rem;">
-    <h3>Home-5</h3><br>
-    <iframe src="https://kovikarthik.github.io/sihhome5/" style="border:0;height:90vh;width: 100%;">
-    </iframe>
+    <h3>Home-1</h3><br>
+    <div style="overflow: hidden;width: 95vw;height: 90vh;">
+        <iframe src="https://kovikarthik.github.io/sihhome5/" style="border:0;height:90vh;width: 100vw;left: 10%;">
+        </iframe>
+    </div>
 </div>
 <div style="margin: 2rem;">
-    <h3>Home-6</h3><br>
-    <iframe src="https://kovikarthik.github.io/sihhome6/" style="border:0;height:90vh;width: 100%;">
-    </iframe>
+    <h3>Home-1</h3><br>
+    <div style="overflow: hidden;width: 95vw;height: 90vh;">
+        <iframe src="https://kovikarthik.github.io/sihhome6/" style="border:0;height:90vh;width: 100vw;left: 10%;">
+        </iframe>
+    </div>
 </div>
+
+
+
+
+
+
+
 
 <!-- <iframe width="100%" height="100%" frameBorder="0" [src]="sayduck"></iframe> -->
