--- a/src/app/adminfolder/adminmaps/adminmaps.component.html
+++ b/src/app/adminfolder/adminmaps/adminmaps.component.html
@@ -1,6 +1,7 @@
 <br />
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" style="float: right;"
-    (click)="displaymodal()">Add slum</button>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"
+    style="float: right;margin-right: 1rem;background-color: rgb(16, 29, 127);" (click)="displaymodal()"><b>New
+        Slum</b></button>
 
 
 <div *ngIf="data.length!=0 else nodata" class="row m-2 mt-0 ml-0" st>
@@ -45,14 +46,15 @@
 <div style="margin-top: 10%;" class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display}">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title" style="text-align: center;display: flex;justify-content: center;">Job
-                    Application</h4>
+            <div class="modal-header" style="text-align: center;display: flec
+            ;align-items: center;justify-content: center;">
+                <h4 class="modal-title"><b>Maps</b></h4>
             </div>
-            <div class="modal-body ">
-                <div [formGroup]="mapData" class="table-responsive" style="height: 60vh;margin-top: 0;padding-top:  0;">
+            <div class="modal-body " style="padding-bottom: 0.5rem;">
+                <form [formGroup]="mapData" class="table-responsive"
+                    style="height: 60vh;margin-top: 0;padding-top:  0;">
                     <label><b>Slum Id</b></label>
-                    <input [disabled]="editMode" type="text" class="form-control shadow-none" placeholder="Slum Id"
+                    <input [disabled]="true" type="text" class="form-control shadow-none" placeholder="Slum Id"
                         formControlName="slumid">
                     <span *ngIf="err" style="color:crimson;font-size: 0.8rem;">Enter valid text</span><br />
                     <label><b>Slum name</b></label>
@@ -82,12 +84,14 @@
                         formControlName="description"></textarea>
                     <span *ngIf="err" style="color:crimson;font-size: 0.8rem;">Enter valid text</span><br>
 
-                    <button (click)="display='None'" style="float: right ;margin-right:1.2rem;" class="btn btn-danger">
+                    <button (click)="display='None';prevslumid='';close()"
+                        style="float: right ;margin-right:1.2rem;box-shadow: none;" class="btn btn-danger">
                         Close</button>
-                    <button (click)="submit()" style="float: right ;margin:0rem 1rem;" class="btn btn-primary"><span
-                            *ngIf="!editMode">Add
-                            slum</span><span *ngIf="editMode">Edit slum</span></button>
-                </div>
+                    <button (click)="submit()"
+                        style="float: right ;margin:0rem 1rem;background-color: rgb(16, 29, 127);box-shadow: none;"
+                        class="btn btn-primary"><span *ngIf="!editMode"><b>Add
+                                Slum</b></span><span *ngIf="editMode"><b>Edit Slum</b></span></button><br><br>
+                </form>
             </div>
 
         </div>
